valid_tests/control_flow/test2.go
// Test 2: Nested loops
func main() {
    for i := 0; i < 3; i = i + 1 {
        for j := 0; j < 3; j = j + 1 {
            product := i * j
        }
    }
}
