invalid_tests/statements/test8.go
// Test 2: For loop with invalid expression
func main() {
    for i := 0; "carlos"; i++ {
        x := i
    }
}
